--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img class="logo" src="/imagenes/alura.png" alt="logo de alura">
+        <img class="logo" src="/imagenes/Alura.png" alt="logo de alura">
     </header>
 
     <main>
